translate days to italian

--- a/index.html
+++ b/index.html
@@ -47,43 +47,43 @@
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="monday" checked>
         <label class="form-check-label" for="monday">
-          Monday
+          Lunedì
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="tuesday" checked>
         <label class="form-check-label" for="tuesday">
-          Tuesday
+          Martedì
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="wednesday" checked>
         <label class="form-check-label" for="wednesday">
-          Wednesday
+          Mercoledì
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="thursday" checked>
         <label class="form-check-label" for="thursday">
-          Thursday
+          Giovedì
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="friday" checked>
         <label class="form-check-label" for="friday">
-          Friday
+          Venerdì
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="saturday">
         <label class="form-check-label" for="saturday">
-          Saturday
+          Sabato
         </label>
       </div>
       <div class="form-check">
         <input class="form-check-input" type="checkbox" value="" id="sunday">
         <label class="form-check-label" for="sunday">
-          Sunday
+          Domenica
         </label>
       </div>
       <br>
