--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
 </head>
 
 <body>
-  <div class="container">
-    <!-- <h1>Holiday planner</h1> -->
-    <br>
-    <h1>Alloca ferie</h1>
-    <p>Alloca le ferie in modo ottimale massimizando il numero di giorni consecutivi e considerando le fesività.</p>
 
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Holiday Planner</a>
+  </nav>
+
+  <div class="container">
+
+    <br>
+    <p>Alloca le ferie in modo ottimale massimizando il numero di giorni consecutivi e considerando le fesività.</p>
     <form class="needs-validation" novalidate>
       <div class="form-group">
         <label for="countries">Nazione:</label>
@@ -91,15 +94,17 @@
     </form>
 
     <hr>
-    <!-- <a href="javascript:;" onclick="clickPublicHoliday();"><h2>Migliori possibilitaaaaaaaaaaa</h2></a> -->
     <h2>Migliori possibilità:</h2>
-    <div id="result"></div>
+    <div id="result">
+      ...
+    </div>
 
   </div>
 
   <footer class="footer mt-auto py-3">
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.05);">
-      © 2021 Copyright: <a href="https://marcello-dev.github.io/">Marcello Monachesi</a>
+      <p>© 2022 Copyright: <a href="https://marcello-dev.github.io/">Marcello Monachesi</a></p>
+      Source code -> <a href="https://github.com/marcello-dev/holiday-planner">Github</a>
     </div>
   </footer>
   <script>
@@ -144,7 +149,7 @@
         const datePublicHoliday = new Date(publicHoliday.day);
         publicHolidaysDates.push(datePublicHoliday);
       }
-      const bestHolidays = best(year.year, publicHolidaysDates, leavedaysInput.value);
+      const bestHolidays = getBestHoliday(year.year, publicHolidaysDates, leavedaysInput.value);
       const groupedHolidays = groupBy(bestHolidays, date => date.getMonth());
 
       // print bestholidays
@@ -200,18 +205,18 @@
             // light green
             divCol.style.backgroundColor = 'rgb(162, 235, 164)';
             const publicHoliday = publicHolidaysDates.find((publicDay) => publicDay.getMonth() == currentDay.getMonth() && currentDay.getDate() == publicDay.getDate());
-            let descEn = "";
+            let description = "";
             for (const publicHolidayJson of year.publicHolidays) {
               const datePublicHoliday = new Date(publicHolidayJson.day);
               if (datePublicHoliday.getMonth() == publicHoliday.getMonth() && datePublicHoliday.getDate() == publicHoliday.getDate()) {
-                descEn = publicHolidayJson.description;
+                description = publicHolidayJson.description;
               }
             }
             const a = document.createElement('a');
             a.href = 'javascript:;';
             a.setAttribute("data-toggle", "tooltip");
             a.setAttribute("data-placement", "top");
-            a.setAttribute("title", descEn);
+            a.setAttribute("title", description);
             a.appendChild(document.createTextNode(i + 1));
             divCol.appendChild(a);
             divRow.appendChild(divCol);
@@ -238,8 +243,7 @@
           resultDiv.appendChild(divRow);
         }
       }
-      const br = document.createElement('br');
-      resultDiv.appendChild(br);
+      resultDiv.appendChild(document.createElement('br'));
     }
 
     function daysInMonth(month, year) {
@@ -280,7 +284,7 @@
       return allocations;
     }
 
-    function best(year, publicHolidays, leaveDays) {
+    function getBestHoliday(year, publicHolidays, leaveDays) {
       const totDays = daysInYear(year);
       const yearAsArray = new Array(totDays).fill(false);
       // set all working days
