only input leave days

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="leavedays">Giorni di ferie disponibili:</label>
+        <label for="leavedays">Giorni di ferie:</label>
         <input type="number" class="form-control" id="leavedays" min="1" max="365" required>
       </div>
       <p>Giorni lavorativi:</p>
